--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,10 +1,28 @@
+a, a:visited, a:hover, a:active {
+  color: inherit;
+  text-decoration: none;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(226, 226, 226);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(136, 136, 136);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(85, 85, 85);
+}
+
 body {
   background-image: url(../Images/paperbg.jpg);
   background-attachment: fixed;
-}
-
-nav {
-  background-color: teal;
+  margin: 0;
 }
 
 .Body h1{
@@ -12,4 +30,10 @@ nav {
   text-align: center;
   margin: 50px 0 50px;
   font-family: 'Pangolin', cursive;
-} 
+}
+
+.loading {
+  width: 100px;
+  height: 100px;
+  margin: 10% auto;
+}
