--- a/src/styles/online.css
+++ b/src/styles/online.css
@@ -118,17 +118,21 @@
 }
 
 .Modal .chatroom .YourMessage {
+    display: inline-block;
     border: 1px solid black;
     border-radius: 10px;
     padding: 5px 10px;
+    word-break: break-all;
 }
 
 .Modal .chatroom .PartnerMessage {
+    display: inline-block;
     border: 1px solid black;
     border-radius: 10px;
     color: white;
     background-color: black;
     padding: 5px 10px;
+    word-break: break-all;
 }
 
 @media (max-width: 450px) {
